Updated navigation bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,23 +21,15 @@
       <div>
         <nav id="Menu">
           <a href="{{ site.url }}"><button class="navbutton">Home</button></a>
-          <div class="dropdown"><button class="dropbtn">Projects</button>
+          <div class="dropdown"><button class="dropbtn">Seminars</button>
             <div class="dropdown-content">
-              <a href="{{ site.url }}/projects/events" >Events</a>
-              <a href="{{ site.url }}/projects/notes">Notes</a>
-              <a href="{{ site.url }}/pdf/Hyperbolic_Equations.pdf" target="_blank">Hyperbolic Equations</a>
-              <a href="{{ site.url }}/pdf/Mecânica_Clássica.pdf" target="_blank">Mecânica Clássica</a>
-              <a href="{{ site.url }}/pdf/LaTeX_XV_STO.pdf" target="_blank">Introdução ao LaTeX</a>
+              <a href="{{ site.url }}/seminars/upcoming" >Upcoming</a>
+              <a href="{{ site.url }}/seminars/previously">Previously</a>
+              <a href="{{ site.url }}/seminars/faq">F.A.Q.</a>
+              <a href="{{ site.url }}/seminars/submit">Submit</a>
             </div>
           </div>		
-
-           <div class="dropdown"><button class="dropbtn">Teaching</button>
-            <div class="dropdown-content">
-              <a href="{{ site.url }}/teaching/mecanica" target="principal">Mecânica Clássica</a>
-              <a href="{{ site.url }}/teaching/latex">Introdução ao LaTeX</a>
-            </div>
-          </div> 
-          <a href="{{ site.url }}/etcetera"><button class="navbutton">Et cetera</button></a>
+          <a href="{{ site.url }}/etcetera"><button class="navbutton">MiniJournal</button></a>
         </nav>
 
     <div class="wrapper">
