--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
           <a href="{{ site.url }}"><button class="navbutton">Home</button></a>
           <div class="dropdown"><button class="dropbtn">Seminars</button>
             <div class="dropdown-content">
-              <a href="{{ site.url }}/seminars/upcoming" >Upcoming</a>
+              <a href="{{ site.url }}/seminars/" >Upcoming</a>
               <a href="{{ site.url }}/seminars/previously">Previously</a>
               <a href="{{ site.url }}/seminars/faq">F.A.Q.</a>
               <a href="{{ site.url }}/seminars/submit">Submit</a>
