--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
               <a href="{{ site.url }}/seminars/submit">Submit</a>
             </div>
           </div>		
-          <a href="{{ site.url }}/etcetera"><button class="navbutton">MiniJournal</button></a>
+          <a href="{{ site.url }}/minijournal"><button class="navbutton">MiniJournal</button></a>
         </nav>
 
     <div class="wrapper">
