--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,15 @@
             </div>
           </div>		
           <a href="{{ site.url }}/minijournal"><button class="navbutton">MiniJournal</button></a>
+          <a href="{{ site.url }}/projects"><button class="navbutton">Projects</button></a>
+          <div class="dropdown"><button class="dropbtn">Social Media</button>
+            <div class="dropdown-content">
+              <a href="https://twitter.com/lambdadps" target="_blank">Twitter</a>
+              <a href="https://t.me/lambdadps" target="_blank">Telegram Channel</a>
+              <a href="https://www.facebook.com/lambdadps" target="_blank">Facebook</a>
+              <a href="https://www.instagram.com/lambdadps" target="_blank">Instagram</a>
+            </div>
+          </div>
         </nav>
 
     <div class="wrapper">
