--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,13 @@
               <a href="https://www.instagram.com/lambdadps" target="_blank">Instagram</a>
             </div>
           </div>
+          <div class="dropdown"><button class="dropbtn"><a href="{{ site.url }}/jayme/2021">III Escola Jayme Tiomno</a></button>
+            <div class="dropdown-content">
+              <a href="{{ site.url }}/jayme/2021">Informações Gerais</a>
+              <a href="{{ site.url }}/jayme/2021/workshops">Workshops</a>
+              <a href="{{ site.url }}/jayme/2021/inscricoes">Inscrições</a>
+            </div>
+          </div>
         </nav>
 
     <div class="wrapper">
