--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,12 @@
               <a href="{{ site.url }}/seminars/faq">F.A.Q.</a>
             </div>
           </div>		
-          <a href="{{ site.url }}/minijournal"><button class="navbutton">MiniJournal</button></a>
-          <a href="{{ site.url }}/projects"><button class="navbutton">Projects</button></a>
+          <div class="dropdown"><button class="dropbtn"><a href="{{ site.url }}/projects">Projects</a></button>
+            <div class="dropdown-content">
+              <a href="{{ site.url }}/minijournal">Minijournal</a>
+              <a href="{{ site.url }}/jayme">Escola Jayme Tiomno</a>
+            </div>
+          </div>
           <div class="dropdown"><button class="dropbtn">Social Media</button>
             <div class="dropdown-content">
               <a href="https://twitter.com/lambdadps" target="_blank">Twitter</a>
@@ -38,7 +42,7 @@
               <a href="https://www.instagram.com/lambdadps" target="_blank">Instagram</a>
             </div>
           </div>
-          <div class="dropdown"><button class="dropbtn"><a href="{{ site.url }}/jayme/2021">III Escola Jayme Tiomno</a></button>
+          <div class="dropdown"><a href="{{ site.url }}/jayme/2021"><button class="dropbtn">III Escola Jayme Tiomno</button></a>
             <div class="dropdown-content">
               <a href="{{ site.url }}/jayme/2021">Informações Gerais</a>
               <a href="{{ site.url }}/jayme/2021/workshops">Workshops</a>
