--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
               <a href="{{ site.url }}/seminars/faq">F.A.Q.</a>
             </div>
           </div>		
-          <div class="dropdown"><button class="dropbtn"><a href="{{ site.url }}/projects">Projects</a></button>
+          <div class="dropdown"><a href="{{ site.url }}/projects"><button class="dropbtn">Projects</button></a>
             <div class="dropdown-content">
               <a href="{{ site.url }}/minijournal">Minijournal</a>
               <a href="{{ site.url }}/jayme">Escola Jayme Tiomno</a>
@@ -40,12 +40,14 @@
               <a href="https://t.me/lambdadps" target="_blank">Telegram Channel</a>
               <a href="https://www.facebook.com/lambdadps" target="_blank">Facebook</a>
               <a href="https://www.instagram.com/lambdadps" target="_blank">Instagram</a>
+              <a href="https://www.youtube.com/channel/UCPntaDiZZa1OIGiAUssJTxQ" target="_blank">YouTube</a>
             </div>
           </div>
           <div class="dropdown"><a href="{{ site.url }}/jayme/2021"><button class="dropbtn">III Escola Jayme Tiomno</button></a>
             <div class="dropdown-content">
               <a href="{{ site.url }}/jayme/2021">Informações Gerais</a>
               <a href="{{ site.url }}/jayme/2021/workshops">Workshops</a>
+              <a href="{{ site.url }}/jayme/2021/faq">F.A.Q.</a>
               <a href="{{ site.url }}/jayme/2021/inscricoes">Inscrições</a>
             </div>
           </div>
