--- a/_layouts/jayme3.html
+++ b/_layouts/jayme3.html
@@ -31,8 +31,8 @@
 
       <section>
         <div id="title">
-          <h1 style="font-weight: 500">{{ III Escola Jayme Tiomno de Física Teórica | default: site.github.repository_name }}</h1>
-          <p>{{ Dead Physicists Society | default: site.github.project_tagline }}</p>
+          <h1 style="font-weight: 500">{{ site.jayme3title | default: site.github.repository_name }}</h1>
+          <p>{{ site.title | default: site.github.project_tagline }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme based on "Midnight", by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
