--- a/_layouts/jayme3.html
+++ b/_layouts/jayme3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}/favicon.ico">
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
             <div class="dropdown-content">
               {% for workshop in site.workshops %}
                 {% if workshop.eventcode contains 'jayme3' %}
-                  <a href="{{ workshop.url }}">{{ workshop.title }}</a>
+                  <a href="{{ workshop.url }}">{{ workshop.shortname }}</a>
                 {% endif %}
               {% endfor %}
             </div>
