--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,14 +43,7 @@
               <a href="https://www.youtube.com/channel/UCPntaDiZZa1OIGiAUssJTxQ" target="_blank">YouTube</a>
             </div>
           </div>
-          <div class="dropdown"><a href="{{ site.url }}/jayme/2021"><button class="dropbtn">III Escola Jayme Tiomno</button></a>
-            <div class="dropdown-content">
-              <a href="{{ site.url }}/jayme/2021">Informações Gerais</a>
-              <a href="{{ site.url }}/jayme/2021/workshops">Workshops</a>
-              <a href="{{ site.url }}/jayme/2021/faq">F.A.Q.</a>
-              <a href="{{ site.url }}/jayme/2021/inscricoes">Inscrições</a>
-            </div>
-          </div>
+          <a href="{{ site.url }}/fundmat"><button class="navbutton">Fundamentos Matemáticos para Físicos</button></a>
         </nav>
 
     <div class="wrapper">
