--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
             <div class="dropdown-content">
               <a href="{{ site.url }}/minijournal">Minijournal</a>
               <a href="{{ site.url }}/jayme">Escola Jayme Tiomno</a>
+              <a href="{{ site.url }}/fundmat">Fundamentos Matemáticos para Físicos</a>
+              <a href="{{ site.url }}/proofs">Técnicas de Demonstração</a>
             </div>
           </div>
           <div class="dropdown"><button class="dropbtn">Social Media</button>
@@ -43,7 +45,7 @@
               <a href="https://www.youtube.com/channel/UCPntaDiZZa1OIGiAUssJTxQ" target="_blank">YouTube</a>
             </div>
           </div>
-          <a href="{{ site.url }}/fundmat"><button class="navbutton">Fundamentos Matemáticos para Físicos</button></a>
+          <a href="{{ site.url }}/proofs"><button class="navbutton">Técnicas de Demonstração</button></a>
         </nav>
 
     <div class="wrapper">
