--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
               <a href="https://www.youtube.com/channel/UCPntaDiZZa1OIGiAUssJTxQ" target="_blank">YouTube</a>
             </div>
           </div>
-          <a href="{{ site.url }}/proofs"><button class="navbutton">IV Escola Jayme Tiomno</button></a>
+          <a href="https://lambdadps.github.io/jayme/2022/"><button class="navbutton">IV Escola Jayme Tiomno</button></a>
         </nav>
 
     <div class="wrapper">
