--- a/_layouts/jayme4.html
+++ b/_layouts/jayme4.html
@@ -39,7 +39,7 @@
 
       <section>
         <div id="title">
-          <h1 style="font-weight: 500">{{ site.jayme4title | default: site.github.project_jayme4 }}</h1>
+          <h1 style="font-weight: 500">{{ site.jayme4title | default: site.github.repository_name }}</h1>
           <p>{{ site.title | default: site.github.project_tagline }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
