--- a/_layouts/jayme4.html
+++ b/_layouts/jayme4.html
@@ -21,7 +21,7 @@
       <div>
         <nav id="Menu">
           <a href="{{ site.url }}/jayme/2022"><button class="navbutton">Home</button></a>
-          <div class="dropdown"><a href="{{ site.url }}/jayme/2022/workshops presenciais"><button class="dropbtn">Workshops presenciais</button></a>
+          <div class="dropdown"><a href="{{ site.url }}/jayme/2022/workshops-presenciais"><button class="dropbtn">Workshops presenciais</button></a>
             <div class="dropdown-content">
               {% for workshop in site.workshops %}
                 {% if workshop.eventcode contains 'jayme4-presencial' %}
