--- a/_layouts/jayme4.html
+++ b/_layouts/jayme4.html
@@ -30,7 +30,7 @@
               {% endfor %}
             </div>
           </div>
-          <div class="dropdown"><a href="{{ site.url }}/jayme/2022/workshops"><button class="dropbtn">Workshops à distância</button></a>
+          <div class="dropdown"><a href="{{ site.url }}/jayme/2022/workshops-distancia"><button class="dropbtn">Workshops à distância</button></a>
             <div class="dropdown-content">
               {% for workshop in site.workshops %}
                 {% if workshop.eventcode contains 'jayme4-distancia' %}
