--- a/_layouts/jayme5.html
+++ b/_layouts/jayme5.html
@@ -21,7 +21,7 @@
       <div>
         <nav id="Menu">
           <a href="{{ site.url }}/jayme/2023"><button class="navbutton">Home</button></a>
-          <div class="dropdown"><a href="{{ site.url }}/jayme/2023/workshops"><button class="dropbtn">Workshops</button></a>
+          <div class="dropdown"><a href="{{ site.url }}/jayme/2023/workshops"><button class="dropbtn">Cursos</button></a>
             <div class="dropdown-content">
               {% for workshop in site.workshops %}
                 {% if workshop.eventcode contains 'jayme5' %}
