--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,6 @@
             <div class="dropdown-content">
               <a href="{{ site.url }}/minijournal">Minijournal</a>
               <a href="{{ site.url }}/jayme">Escola Jayme Tiomno</a>
-              <a href="{{ site.url }}/fundmat">Fundamentos Matemáticos para Físicos</a>
               <a href="{{ site.url }}/proofs">Técnicas de Demonstração</a>
             </div>
           </div>
@@ -45,7 +44,7 @@
               <a href="https://www.youtube.com/channel/UCPntaDiZZa1OIGiAUssJTxQ" target="_blank">YouTube</a>
             </div>
           </div>
-          <a href="https://lambdadps.github.io/jayme/2023/"><button class="navbutton">V Escola Jayme Tiomno</button></a>
+          <a href="https://lambdadps.github.io/jayme/2024/"><button class="navbutton">VI Escola Jayme Tiomno</button></a>
         </nav>
 
     <div class="wrapper">
