--- a/_layouts/jayme6.html
+++ b/_layouts/jayme6.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <a href="{{ site.url }}/jayme/2024/posteres"><button class="navbutton">Pôsteres</button></a>
-          <a href="{{ site.url }}/jayme/2024/faq"><button class="navbutton">F.A.Q.</button></a>
+          <a href="{{ site.url }}/jayme/2024/mesas"><button class="navbutton">Mesas redondas</button></a>
           <a href="{{ site.url }}/jayme/2024/inscricoes"><button class="navbutton">Inscrições</button></a>
         </nav>
 
