--- a/_layouts/jayme6.html
+++ b/_layouts/jayme6.html
@@ -33,7 +33,7 @@
           <a href="{{ site.url }}/jayme/2024/posteres"><button class="navbutton">Pôsteres</button></a>
           <a href="{{ site.url }}/jayme/2024/mesas"><button class="navbutton">Mesas redondas</button></a>
           <a href="{{ site.url }}/jayme/2024/inscricoes"><button class="navbutton">Inscrições</button></a>
-          <a href="{{ site.url }}/jayme/2024/faq"><button class="navbutton">F.A.Q</button></a>
+          <a href="{{ site.url }}/jayme/2024/cronograma"><button class="navbutton">Cronograma</button></a>
         </nav>
 
     <div class="wrapper">
