--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,9 @@
 
       <section>
         <div id="title">
-          <h1 style="font-weight: 500">{{ site.title | default: site.github.repository_name }}</h1><br>
+          <h1 style="font-weight: 500">{{ site.title | default: site.github.repository_name }}</h1>
+          <br>
+          <br>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme based on "Midnight", by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
