--- a/_layouts/jayme6.html
+++ b/_layouts/jayme6.html
@@ -44,7 +44,7 @@
           <br>
           <br>
           <hr>
-          <br>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme based on "Midnight", by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
         {{ content }}
