--- a/_layouts/jayme6.html
+++ b/_layouts/jayme6.html
@@ -32,6 +32,7 @@
           </div>
           <a href="{{ site.url }}/jayme/2024/posteres"><button class="navbutton">Pôsteres</button></a>
           <a href="{{ site.url }}/jayme/2024/mesas"><button class="navbutton">Mesas redondas</button></a>
+          <a href="{{ site.url }}/jayme/2024/laboratórios"><button class="navbutton">Laboratórios</button></a>
           <a href="{{ site.url }}/jayme/2024/cronograma"><button class="navbutton">Cronograma</button></a>
           <a href="{{ site.url }}/jayme/2024/inscricoes"><button class="navbutton">Inscrições</button></a>
         </nav>
